test/functions/ferguson/query/query-generic-type-leaf-borrowed.good
query-generic-type-leaf-borrowed.chpl:34: error: unresolved call 'f(Wrapper(OtherGenericClass(int(64))))'
query-generic-type-leaf-borrowed.chpl:12: note: this candidate did not match: Wrapper.f
query-generic-type-leaf-borrowed.chpl:34: note: because call is not written as a method call
query-generic-type-leaf-borrowed.chpl:12: note: but candidate function is a method
query-generic-type-leaf-borrowed.chpl:15: note: candidates are: f(x: Wrapper(borrowed GenericClass))
